<resources>
    <string name="app_name">MemoryGameProject</string>
    <string name="title_memory">Team Pasta Memory Game</string>
    <string name="menu_option_2x2_game">4 Tiles</string>
    <string name="menu_option_2x3_game">6 Tiles</string>
    <string name="menu_option_2x4_game">8 Tiles</string>
    <string name="menu_option_2x5_game">10 Tiles</string>
    <string name="menu_option_3x4_game">12 Tiles</string>
    <string name="menu_option_2x7_game">14 Tiles</string>
    <string name="menu_option_4x4_game">16 Tiles</string>
    <string name="menu_option_3x6_game">18 Tiles</string>
    <string name="menu_option_4x5_game">20 Tiles</string>
    <string name="try_again_button">Try Again</string>
    <string name="high_score_title">High Score</string>
    <string name="end_game_title">End Game</string>
    <string name="new_game_title">New Game</string>
    <string name="high_scores">Scores</string>
    <string name="button_load_scores">Show High Scores</string>
    <string name="high_score_info">Display High Scores</string>
</resources>
