<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.lennyyang.memorygameproject.MenuActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_memory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="4">

        <Button
            android:id="@+id/button_2x2_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_2x2_game" />

        <Button
            android:id="@+id/button_2x3_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_2x3_game" />

        <Button
            android:id="@+id/button_2x4_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_2x4_game" />

        <Button
            android:id="@+id/button_2x5_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_2x5_game" />

        <Button
            android:id="@+id/button_3x4_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_3x4_game" />

        <Button
            android:id="@+id/button_2x7_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_2x7_game" />

        <Button
            android:id="@+id/button_4x4_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_4x4_game" />

        <Button
            android:id="@+id/button_3x6_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_3x6_game" />

        <Button
            android:id="@+id/button_4x5_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_option_4x5_game" />

    </GridLayout>
</LinearLayout>