<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative_layout_2x4"
    tools:context="com.example.lennyyang.memorygameproject.Game2x4Activity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/try_again_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/try_again_button"
                android:weightSum="1"
                android:layout_alignParentRight="true"/>

            <Button
                android:id="@+id/end_game_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_game_title"
                android:weightSum="3"
                android:layout_alignParentRight="true"/>

            <Button
                android:id="@+id/new_game_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_game_title"
                android:weightSum="2"
                android:layout_alignParentRight="true"/>
        </LinearLayout>
    </LinearLayout>

    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:rowCount="2"
        android:id="@+id/grid_layout_2x4"
        tools:context="com.example.lennyyang.memorygameproject.Game2x4Activity">

    </GridLayout>
</RelativeLayout>
